--- a/app/category.html
+++ b/app/category.html
@@ -1,4 +1,6 @@
-@@include("html/_header-page-address.html")
+@@include("html/_header-page-address.html", {
+    "link": 'Delivered Canapes'
+})
 
         <main class="main">
             <section class="category">
