--- a/app/html/_header-page-address.html
+++ b/app/html/_header-page-address.html
@@ -114,7 +114,7 @@
                         </li>
                         <li>
                             <a>
-                                Delivered Canapes
+                                @@link
                             </a>
                         </li>
                     </ul>
