--- a/app/category.html
+++ b/app/category.html
@@ -614,137 +614,137 @@
                                 </div>
                             </form>
                         </menu>
-                        <aside class="category__basket">
-                            <button class="category__basket--open open-basket-popup btn _bold _center _full" aria-label="Basket" type="button">
+                        <aside class="category__basket basket">
+                            <button class="basket__open open-basket-popup btn _bold _center _full" aria-label="Basket" data-id="basket-popup" type="button">
                                 <img src="img/icons/basket.svg" width="22" height="22" alt="">
                                 <span>Basket</span>
                             </button>
-                            <div class="category__basket--popup">
-                                <button class="category__basket--close-btn close-basket-popup" title="Close" type="button">
+                            <div class="basket__popup" id="basket-popup">
+                                <button class="basket__close-btn close-basket-popup" title="Close" type="button">
                                     <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M0.586047 11.9998C0.470144 11.9999 0.356837 11.9655 0.26046 11.9011C0.164083 11.8367 0.0889654 11.7452 0.0446082 11.6381C0.000250996 11.5311 -0.0113527 11.4132 0.0112649 11.2996C0.0338824 11.1859 0.0897052 11.0815 0.171672 10.9995L10.9998 0.171396C11.1097 0.0614965 11.2588 -0.000244141 11.4142 -0.000244141C11.5696 -0.000244141 11.7186 0.0614965 11.8285 0.171396C11.9384 0.281295 12.0002 0.43035 12.0002 0.585771C12.0002 0.741191 11.9384 0.890247 11.8285 1.00015L1.00042 11.8283C0.946056 11.8827 0.881462 11.926 0.810351 11.9554C0.739239 11.9848 0.663012 11.9999 0.586047 11.9998Z" fill="#696969"/>
                                         <path d="M11.4141 11.9998C11.3372 11.9999 11.2609 11.9848 11.1898 11.9554C11.1187 11.926 11.0541 11.8827 10.9998 11.8283L0.17164 1.00015C0.0617407 0.890247 0 0.741191 0 0.585771C0 0.43035 0.0617407 0.281295 0.17164 0.171396C0.281539 0.0614965 0.430594 -0.000244141 0.586015 -0.000244141C0.741436 -0.000244141 0.890491 0.0614965 1.00039 0.171396L11.8285 10.9995C11.9105 11.0815 11.9663 11.1859 11.9889 11.2996C12.0115 11.4132 11.9999 11.5311 11.9556 11.6381C11.9112 11.7452 11.8361 11.8367 11.7397 11.9011C11.6433 11.9655 11.53 11.9999 11.4141 11.9998Z" fill="#696969"/>
                                     </svg>
                                 </button>
-                                <div class="category__basket--body">
-                                    <h3 class="category__basket--title">
+                                <div class="basket__body">
+                                    <h3 class="basket__title">
                                         Basket
                                     </h3>
-                                    <div class="category__basket--terms">
+                                    <div class="basket__terms">
                                         <ul>
                                             <li>Minimum order from 250£</li>
                                             <li>Minimum number of canapes 1 flavor 10 pcs</li>
                                         </ul>
                                     </div>
-                                    <form action="#" class="category__basket--form">
-                                        <h4 class="category__basket--min-title">
+                                    <form action="#" class="basket__form">
+                                        <h4 class="basket__min-title">
                                             Canapes you have chosen:
                                         </h4>
-                                        <ul class="category__basket--list">
-                                            <li class="category__basket--item">
-                                                <span class="category__basket--name">
+                                        <ul class="basket__list">
+                                            <li class="basket__item">
+                                                <span class="basket__item--name">
                                                     Skewers of marinated figs with prosciutto, mozzarella & basil
                                                 </span>
-                                                <span class="category__basket--tag">Meat</span>
-                                                <div class="category__basket--length">
+                                                <span class="basket__item--tag">Meat</span>
+                                                <div class="basket__item--length">
                                                     <button class="dish-minus" type="button" title="Minus"></button>
                                                     <input type="number" class="dish-length" name="dish-length-1" value="10" min="10">
                                                     <button class="dish-plus" type="button" title="Plus"></button>
                                                 </div>
                                             </li>
-                                            <li class="category__basket--item">
-                                                <span class="category__basket--name">
+                                            <li class="basket__item">
+                                                <span class="basket__item--name">
                                                     Skewers of marinated figs with prosciutto, mozzarella & basil
                                                 </span>
-                                                <span class="category__basket--tag">Meat</span>
-                                                <div class="category__basket--length">
+                                                <span class="basket__item--tag">Meat</span>
+                                                <div class="basket__item--length">
                                                     <button class="dish-minus" type="button" title="Minus"></button>
                                                     <input type="number" class="dish-length" name="dish-length-2" value="10" min="10">
                                                     <button class="dish-plus" type="button" title="Plus"></button>
                                                 </div>
                                             </li>
-                                            <li class="category__basket--item">
-                                                <span class="category__basket--name">
+                                            <li class="basket__item">
+                                                <span class="basket__item--name">
                                                     Skewers of marinated figs with prosciutto, mozzarella & basil
                                                 </span>
-                                                <span class="category__basket--tag">Meat</span>
-                                                <div class="category__basket--length">
+                                                <span class="basket__item--tag">Meat</span>
+                                                <div class="basket__item--length">
                                                     <button class="dish-minus" type="button" title="Minus"></button>
                                                     <input type="number" class="dish-length" name="dish-length-3" value="10" min="10">
                                                     <button class="dish-plus" type="button" title="Plus"></button>
                                                 </div>
                                             </li>
-                                            <li class="category__basket--item">
-                                                <span class="category__basket--name">
+                                            <li class="basket__item">
+                                                <span class="basket__item--name">
                                                     Skewers of marinated figs with prosciutto, mozzarella & basil
                                                 </span>
-                                                <span class="category__basket--tag">Meat</span>
-                                                <div class="category__basket--length">
+                                                <span class="basket__item--tag">Meat</span>
+                                                <div class="basket__item--length">
                                                     <button class="dish-minus" type="button" title="Minus"></button>
                                                     <input type="number" class="dish-length" name="dish-length-4" value="10" min="10">
                                                     <button class="dish-plus" type="button" title="Plus"></button>
                                                 </div>
                                             </li>
-                                            <li class="category__basket--item">
-                                                <span class="category__basket--name">
+                                            <li class="basket__item">
+                                                <span class="basket__item--name">
                                                     Skewers of marinated figs with prosciutto, mozzarella & basil
                                                 </span>
-                                                <span class="category__basket--tag">Meat</span>
-                                                <div class="category__basket--length">
+                                                <span class="basket__item--tag">Meat</span>
+                                                <div class="basket__item--length">
                                                     <button class="dish-minus" type="button" title="Minus"></button>
                                                     <input type="number" class="dish-length" name="dish-length-5" value="10" min="10">
                                                     <button class="dish-plus" type="button" title="Plus"></button>
                                                 </div>
                                             </li>
-                                            <li class="category__basket--item">
-                                                <span class="category__basket--name">
+                                            <li class="basket__item">
+                                                <span class="basket__item--name">
                                                     Skewers of marinated figs with prosciutto, mozzarella & basil
                                                 </span>
-                                                <span class="category__basket--tag">Meat</span>
-                                                <div class="category__basket--length">
+                                                <span class="basket__item--tag">Meat</span>
+                                                <div class="basket__item--length">
                                                     <button class="dish-minus" type="button" title="Minus"></button>
                                                     <input type="number" class="dish-length" name="dish-length-6" value="10" min="10">
                                                     <button class="dish-plus" type="button" title="Plus"></button>
                                                 </div>
                                             </li>
-                                            <li class="category__basket--item">
-                                                <span class="category__basket--name">
+                                            <li class="basket__item">
+                                                <span class="basket__item--name">
                                                     Skewers of marinated figs with prosciutto, mozzarella & basil
                                                 </span>
-                                                <span class="category__basket--tag">Meat</span>
-                                                <div class="category__basket--length">
+                                                <span class="basket__item--tag">Meat</span>
+                                                <div class="basket__item--length">
                                                     <button class="dish-minus" type="button" title="Minus"></button>
                                                     <input type="number" class="dish-length" name="dish-length-7" value="10" min="10">
                                                     <button class="dish-plus" type="button" title="Plus"></button>
                                                 </div>
                                             </li>
-                                            <li class="category__basket--item">
-                                                <span class="category__basket--name">
+                                            <li class="basket__item">
+                                                <span class="basket__item--name">
                                                     Skewers of marinated figs with prosciutto, mozzarella & basil
                                                 </span>
-                                                <span class="category__basket--tag">Meat</span>
-                                                <div class="category__basket--length">
+                                                <span class="basket__item--tag">Meat</span>
+                                                <div class="basket__item--length">
                                                     <button class="dish-minus" type="button" title="Minus"></button>
                                                     <input type="number" class="dish-length" name="dish-length-8" value="10" min="10">
                                                     <button class="dish-plus" type="button" title="Plus"></button>
                                                 </div>
                                             </li>
                                         </ul>
-                                        <b class="category__basket--note">
+                                        <b class="basket__note">
                                             *The maximum number of verified dishes that you can order is 8.
                                         </b>
-                                        <div class="category__basket--footer">
-                                            <div class="category__basket--total">
+                                        <div class="basket__footer">
+                                            <div class="basket__total">
                                                 <span>Total:</span>
                                                 <strong>220 £</strong>
                                             </div>
-                                            <b class="category__basket--note">
+                                            <b class="basket__note">
                                                 Minimum order from 250 pounds
                                             </b>
-                                            <span class="category__basket--alt-note">
+                                            <span class="basket__alt-note">
                                                 *You can choose additional flavors or add the number of already selected canapes
                                             </span>
-                                            <div class="category__basket--add-note">
+                                            <div class="basket__add-note">
                                                 <svg width="15" height="11" viewBox="0 0 15 11" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                     <path d="M14.8763 5.49345L12.3553 2.88869C12.2726 2.80314 12.1586 2.75486 12.0396 2.75486H10.4286V0.858887C10.4286 0.616191 10.2319 0.419434 9.98918 0.419434H1.82692C1.58423 0.419434 1.38747 0.616191 1.38747 0.858887V2.17766H1.05483C0.812139 2.17766 0.615381 2.37441 0.615381 2.61711C0.615381 2.8598 0.812139 3.05656 1.05483 3.05656H1.38747V3.93588H0.439453C0.196758 3.93588 0 4.13264 0 4.37533C0 4.61803 0.196758 4.81479 0.439453 4.81479H1.38747V8.85063C1.38747 9.09333 1.58423 9.29009 1.82692 9.29009H2.76234C2.84754 9.57368 3.00202 9.83355 3.21729 10.0488C3.56013 10.3917 4.01596 10.5805 4.50079 10.5805C4.98562 10.5805 5.44143 10.3917 5.78429 10.0488C6.00214 9.83097 6.15267 9.57099 6.2364 9.29492H10.433C10.5168 9.57099 10.6673 9.83097 10.8851 10.0488C11.228 10.3917 11.6838 10.5805 12.1686 10.5805C12.6535 10.5805 13.1093 10.3917 13.4521 10.0488C13.67 9.83097 13.8205 9.57099 13.9042 9.29492H14.5605C14.8032 9.29492 15 9.09816 15 8.85547V5.79907C15 5.68499 14.9556 5.57542 14.8763 5.49345ZM13.5237 5.35962H10.4163V3.63377H11.8533L13.5237 5.35962ZM2.26638 4.81476H4.55367C4.79637 4.81476 4.99312 4.618 4.99312 4.3753C4.99312 4.13261 4.79637 3.93585 4.55367 3.93585H2.26638V3.05653H4.87603C5.11872 3.05653 5.31548 2.85978 5.31548 2.61708C5.31548 2.37438 5.11872 2.17763 4.87603 2.17763H2.26638V1.29831H4.87603H9.5497L9.53736 8.41596H6.28137C6.21472 8.07342 6.04904 7.74649 5.78429 7.48171C5.44145 7.13885 4.98562 6.95006 4.50079 6.95006C4.01596 6.95006 3.56016 7.13885 3.21729 7.48171C2.95948 7.73952 2.78883 8.06123 2.72001 8.41112H2.26638V4.81476ZM5.16281 9.42734C4.98598 9.60418 4.75084 9.70156 4.50079 9.70156C4.25074 9.70156 4.01561 9.60418 3.83877 9.42734C3.66193 9.25051 3.56455 9.01537 3.56455 8.76529C3.56455 8.51519 3.66193 8.28005 3.83877 8.10321C4.01561 7.92638 4.25074 7.82899 4.50079 7.82899C4.75084 7.82899 4.98598 7.92638 5.16281 8.10321C5.52785 8.46828 5.52785 9.06228 5.16281 9.42734ZM12.8306 9.42734C12.6538 9.60418 12.4186 9.70156 12.1686 9.70156C11.9185 9.70156 11.6834 9.60418 11.5066 9.42734C11.1415 9.06228 11.1415 8.46831 11.5066 8.10324C11.6834 7.92641 11.9185 7.82902 12.1686 7.82902C12.4186 7.82902 12.6538 7.92641 12.8306 8.10324C13.0074 8.28008 13.1048 8.51521 13.1048 8.76532C13.1048 9.01537 13.0074 9.25051 12.8306 9.42734ZM13.9492 8.41599C13.8825 8.07345 13.7169 7.74652 13.4521 7.48174C13.1092 7.13888 12.6534 6.95009 12.1686 6.95009C11.6837 6.95009 11.2279 7.13888 10.8851 7.48174C10.6516 7.71521 10.4957 7.99704 10.4163 8.29522V6.23853H14.1211V8.41599H13.9492Z" fill="#E4AB93"/>
                                                 </svg>
@@ -752,10 +752,10 @@
                                                     Shipping will cost extra money
                                                 </span>
                                             </div>
-                                            <button class="category__basket--submit btn" type="submit">
+                                            <button class="basket__submit btn" type="submit">
                                                 Add to cart
                                             </button>
-                                            <a href="#" class="category__basket--back">
+                                            <a href="#" class="basket__back">
                                                 Back to selection
                                             </a>
                                         </div>
