--- a/app/index.html
+++ b/app/index.html
@@ -8,20 +8,20 @@
                         <div class="index__intro--col">
                             <div class="index__intro--info">
                                 <h1 class="index__intro--title">
-                                    Couture party food delivered direct <br> to your door.
+                                    Couture на Exquisite party food delivered direct to your door.
                                 </h1>
-                                <a href="#" class="index__intro--btn btn _bold">
+                                <a href="category.html" class="index__intro--btn btn _bold">
                                     <img src="img/icons/cutlery.svg" width="26" height="33" alt="">
-                                    <span>Order online</span>
+                                    <span>Delivered /canapés</span>
                                 </a>
                             </div>
                             <div class="index__intro--info">
                                 <h1 class="index__intro--title">
-                                    Personally crafted events and dinner parties. 
+                                    Easy to serve swanky dinners and buffets. 
                                 </h1>
-                                <a href="#" class="index__intro--btn btn _bold">
+                                <a href="buffet.html" class="index__intro--btn btn _bold">
                                     <img src="img/icons/waiter.svg" width="33" height="33" alt="">
-                                    <span>Find Out More</span>
+                                    <span>Buffets / delivered</span>
                                 </a>
                             </div>
                         </div>
